# anitaTreeMaker

./: A2Rootifier.cxx  ANITA4rootifier.sh  CMakeLists.txt  FolderScript.sh  Makefile  Makefile.legacy  anita4FlightFileMakerUChicago.sh  anita4slurm.sh  antarcticTreatyRootifier.cxx  antarcticTreatyRootifierA3.cxx  awsRootifier.cxx  awsRootifierA3.cxx  basInstrumentsRootifier.cxx  basInstrumentsRootifierA3.cxx  basesCampsRootifier.cxx  basesCampsRootifierA3.cxx  batchAdu5PatSmoother.sh  batchFarmRootify.sh  checkRawNeobrickFiles.sh  fixTelemHeadEventTrees.cxx  fixTriggerTimeAnita3.cxx  fixedWingRestrictedRootifier.cxx  fixedWingRestrictedRootifierA3.cxx  fixedWingRootifier.cxx  fixedWingRootifierA3.cxx  makeA4TimedHeaderFile.cxx  makeAdu5PatFiles.cxx  makeAuxiliaryTree.cxx  makeAveragedSurfHkTree.cxx  makeCalibratedEventInfo.cxx  makeCalibratedEventTrees.cxx  makeConcatanatedFiles.cxx  makeEventHeadTree.cxx  makeEventRunTree.cxx  makeFixedEventHeaderTrees.cxx  makeGpsEventTree.cxx  makeGpsEventTreeBothAdu5s.cxx  makeGpsTree.cxx  makeGpsTttTree.cxx  makeGpuTree.cxx  (+64 more)
macros/: plotEventNumberThingies.C  plotNeoThingies.C
oldScripts/: runAnita3TriggerTimeFixer.sh  runAnita3TttFileMaker.sh  runAnitaIIIFlightFileMaker.sh  runAnitaIIIFlightTurfRemake.sh  runPalestineFileMaker.sh  runTestFileMaker.sh
simpleTreeMaker/branches/R1.0/: Makefile  makeAveragedSurfHkTree.cxx  makeRunLinksAnitaII.sh  makeRunSummaryFile.cxx  makeSummedTurfRateTree.cxx  makeSurfHkTree.cxx  makeTurfRateTree.cxx  runAnitaIIFileMaker.sh
simpleTreeMaker/branches/R1.1/: Makefile  README  makeMonitorTree.cxx  makeOtherTree.cxx  makePrettyHkTree.cxx  runAnitaIIFileMaker.sh
simpleTreeMaker/trunk/: Makefile  checkForCorruptEvents.cxx  keepUpWithTbData.sh  makeAdu5PatFiles.cxx  makeAveragedSurfHkTree.cxx  makeCalibratedEventTrees.cxx  makeConcatanatedFiles.cxx  makeEventHeadTree.cxx  makeEventRunTree.cxx  makeGpsEventTree.cxx  makeGpsEventTreeBothAdu5s.cxx  makeGpsTree.cxx  makeGpsTttTree.cxx  makeGpuTree.cxx  makeRawHeadTree.cxx  makeRunSummaryFile.cxx  makeSlowRateTree.cxx  makeSummedTurfRateTree.cxx  makeSuperSmoothAdu5PatFiles.cxx  makeTelemHeadTree.cxx  makeTurfRateTree.cxx  runAdu5PatSmoother.sh  runAnitaIIIFileMaker.sh  runAnitaIIIFileMakerTelem.sh  runPostFlightFileMaker.sh  runTelemEventMaker.sh  runTelemGpuMaker.sh  runTelemHeaderMaker.sh  runTelemMonitorMaker.sh  runTelemOtherMonitorMaker.sh  runTelemTurfRateMaker.sh  sanityCheckAdu5Pat.C  separateDuplicateEventNumberEntries.C  updateAdu5PatTreesFromTelemetry.cxx
timing/: makePayloadTriggerPlots.C
